# python-supplementary-materials

./: .gitignore  README.md  programming-terms.md  pyproject.toml  python-terms.md  todo.md
educational-problems/: sum_of_1_to_n.py
