[tool.poetry]
name = "supplementary-materials"
version = "0.1.0"
description = "Pythonでの指導のための補足資料"
authors = ["solzard <29563481+solzard@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.4.0"
jupyter = "^1.0.0"
ipykernel = "^6.15.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
